--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ nav a div:hover i , nav a div:hover h3{
     border-color: var(--color2);
 }
 #addLektion #lastRow{
-    border-top: 1px solid white;
+    border-top: 1px solid var(--color2);
     padding: 1vh;
 }
 #addLektion #lastRow:hover{
@@ -255,12 +255,28 @@ nav a div:hover i , nav a div:hover h3{
 }
 #loadAutoGenerate textarea{
     width: 70vw;
-    height: 5vh;
-    padding: 0 1vw 0 1vw;
+    height: 20vh;
+    padding: 1vh 1vw 1vh 1vw;
     margin-bottom: 2vh;
     border-radius: 0.5rem;
     background: linear-gradient(145deg, var(--darkBox1), var(--darkBox2));
     color: var(--color2);
     box-shadow: var(--darkShadow);
     border-color: var(--color2);
+}
+
+#tableLektion{
+    border-collapse: collapse;
+}
+#tableLektion th{
+    padding: 0.5rem;
+    border-bottom: var(--color2) solid 1px;
+}
+#tableLektion td{
+    text-align: center;
+    width: 10vw;
+    padding: 0.5rem;
+}
+#tableLektion .begriff{
+    border-right: var(--color2) solid 1px;
 }
