--- a/style.css
+++ b/style.css
@@ -124,11 +124,19 @@ nav a div:hover i , nav a div:hover h3{
     background: linear-gradient(145deg, var(--darkBox1), var(--darkBox2));
     box-shadow: var(--darkShadow);
     width: 20vw;
-    height: 10vh;
+    height: 13vh;
     border-radius: 1vw;
-    padding: 0.5vh 1vw 0.5vh 1vw;
+    padding: 2vh 1.5vw 2vh 1.5vw;
     border: var(--color1) 1px solid;
     transition: 0.2s all ease;
+}
+.preview h1{
+    font-size: 1.8rem;
+}
+#previewAdd{
+    overflow-y: hidden;
+    font-size: 4rem;
+    text-align: center;
 }
 .preview:hover{
     cursor: pointer;
