--- a/style.css
+++ b/style.css
@@ -20,20 +20,21 @@
 
 /************* MAIN *************/
 :root {
-    --color1: /* rgb(29, 29, 29) */ #323741; 
-    --color2: #cfd3da;
     --lightShadow: 5px 5px 16px #9da0a6,
     -5px -5px 16px #ffffff;
     --darkShadow: 5px 5px 16px #262a31,
     -5px -5px 16px #3e4451;
-    --darkBox1: #363b46;
-    --darkBox2: #2d323b;
-    --lightBox1: #dde2e9;
-    --lightBox2: #babec4;
+
+    --color: tomato;
+    --grey1: #1d2533;
+    --grey2: #283140;
+    --grey3: #5f6876;
+    --grey4: #cfd3da;
+    --grey5: #f2f5fe;
 }
 body {
-    background-color: var(--color1);
-    color: var(--color2);
+    background-color: var(--grey2);
+    color: var(--grey5);
     transition: all 0.2s ease;
 }
 
@@ -45,14 +46,13 @@ nav {
 
     width: 100vw;
     height: 9vh;
-    background: linear-gradient(145deg, var(--darkBox1), var(--darkBox2));
-    box-shadow: 2px 2px 4px var(--color2);
+    background: linear-gradient(145deg, var(--grey1), var(--grey1));
+    box-shadow: 2px 2px 4px var(--grey5);
     justify-content: center;
     align-items: center;
-    border-bottom: 1px solid var(--color2);
 }
 nav i, nav h3{
-    color: var(--color2);
+    color: var(--grey5);
     font-weight: bold;
     font-size: 1.5rem;
 }
@@ -74,7 +74,7 @@ nav a div{
 nav a{
     height: inherit;
     text-decoration: none;
-    color: var(--color2);
+    color: var(--grey3);
     user-select: none;
 }
 nav a:nth-child(4){
@@ -87,7 +87,7 @@ nav a:last-of-type{
     width: 5vw;
 }
 nav a div:hover i , nav a div:hover h3{
-    border-bottom: 2px solid var(--color2);
+    border-bottom: 2px solid var(--grey4);
     cursor: pointer;
     transform:translateY(-0.2rem);
 }
@@ -98,7 +98,7 @@ nav a div:hover i , nav a div:hover h3{
     cursor: pointer;
 }
 #active {
-    border-bottom: 2px solid var(--color2);
+    border-bottom: 2px solid var(--grey4);
 }
 #header img{
     width: 12vw;
@@ -121,13 +121,13 @@ nav a div:hover i , nav a div:hover h3{
 }
 .preview{
     margin: 1vw;
-    background: linear-gradient(145deg, var(--darkBox1), var(--darkBox2));
+    background: linear-gradient(145deg, var(--grey2), var(--grey2));
     box-shadow: var(--darkShadow);
     width: 20vw;
     height: 13vh;
     border-radius: 1vw;
     padding: 2vh 1.5vw 2vh 1.5vw;
-    border: var(--color1) 1px solid;
+    border: var(--grey2) 1px solid;
     transition: 0.2s all ease;
 }
 .preview h1{
@@ -140,7 +140,7 @@ nav a div:hover i , nav a div:hover h3{
 }
 .preview:hover{
     cursor: pointer;
-    border: var(--color2) 1px solid;
+    border: var(--grey3) 1px solid;
 }
 
 
@@ -158,10 +158,10 @@ nav a div:hover i , nav a div:hover h3{
     padding: 0 1vw 0 1vw;
     margin-bottom: 2vh;
     border-radius: 0.5rem;
-    background: linear-gradient(145deg, var(--darkBox1), var(--darkBox2));
-    color: var(--color2);
+    background: linear-gradient(145deg, var(--grey2), var(--grey2));
+    color: var(--grey5);
     box-shadow: var(--darkShadow);
-    border-color: var(--color2);
+    border-color: var(--grey5);
 }
 #addLektion table{
     width: 60vw;
@@ -170,27 +170,27 @@ nav a div:hover i , nav a div:hover h3{
     text-align: center;
     border-collapse: collapse;
 
-    background: linear-gradient(145deg, var(--darkBox1), var(--darkBox2));
+    background: linear-gradient(145deg, var(--grey2), var(--grey2));
     box-shadow: var(--darkShadow);
     border-radius: 1rem;
     overflow: hidden;
 }
 #addLektion th{
     padding: 1vh 0 1vh 0;
-    border-bottom: var(--color2) 0.1rem solid;
+    border-bottom: var(--grey5) 0.1rem solid;
 }
 #addLektion #definition:hover{
     cursor: pointer;
 }
 #addLektion td:first-child, th:first-child{
-    border-right: var(--color2) solid 1px;
+    border-right: var(--grey5) solid 1px;
 }
 #addLektion td input{
     width: 100%;
     height: 100%;
     padding: 1vw 2vw 1vw 2vw;
     background: var(--darkShadow);
-    color: var(--color2);
+    color: var(--grey2);
     border: none;
     font-size: 1rem;
 }
@@ -198,10 +198,10 @@ nav a div:hover i , nav a div:hover h3{
     cursor: pointer;
 }
 #addLektion td input:focus{
-    border-color: var(--color2);
+    border-color: var(--grey5);
 }
 #addLektion #lastRow{
-    border-top: 1px solid var(--color2);
+    border-top: 1px solid var(--grey5);
     padding: 1vh;
 }
 #addLektion #lastRow:hover{
@@ -212,10 +212,10 @@ nav a div:hover i , nav a div:hover h3{
 }   
 #addLektion #confirm{
     user-select: none;
-    background: linear-gradient(145deg, var(--darkBox1), var(--darkBox2));
-    color: var(--color2);
+    background: linear-gradient(145deg, var(--grey2), var(--grey2));
+    color: var(--grey5);
     box-shadow: var(--darkShadow);
-    border: var(--color1) 1px solid;
+    border: var(--grey5) 1px solid;
     width: 20vw;
     height: 5vh;
     text-align: center;
@@ -225,7 +225,7 @@ nav a div:hover i , nav a div:hover h3{
     transition: all 0.2s ease;
 }
 #addLektion #confirm:hover{
-    border: var(--color2) 1px solid;
+    border: var(--grey1) 1px solid;
     cursor: pointer;
 }
 #addLektion #autoGenerate{
@@ -233,15 +233,15 @@ nav a div:hover i , nav a div:hover h3{
     width: 70vw;
     height: 5vh;
     border-radius: 0.5rem;
-    background: linear-gradient(145deg, var(--darkBox1), var(--darkBox2));
-    color: var(--color2);
+    background: linear-gradient(145deg, var(--grey2), var(--grey2));
+    color: var(--grey4);
     box-shadow: var(--darkShadow);
-    border: 1px solid var(--color2);
+    border: 1px solid var(--grey2);
     padding: 1vh 0 0 1vw;
     transition: all 0.2s ease;
 }
 #addLektion #autoGenerate:hover{
-    border: var(--color1) 1px solid;
+    border: var(--grey5) 1px solid;
     cursor: pointer;
 }
 
@@ -252,10 +252,10 @@ nav a div:hover i , nav a div:hover h3{
 }
 #loadAutoGenerate #confirm{
     user-select: none;
-    background: linear-gradient(145deg, var(--darkBox1), var(--darkBox2));
-    color: var(--color2);
+    background: linear-gradient(145deg, var(--grey2), var(--grey2));
+    color: var(--grey2);
     box-shadow: var(--darkShadow);
-    border: var(--color1) 1px solid;
+    border: var(--grey5) 1px solid;
     width: 20vw;
     height: 5vh;
     text-align: center;
@@ -265,7 +265,7 @@ nav a div:hover i , nav a div:hover h3{
     transition: all 0.2s ease;
 }
 #loadAutoGenerate #confirm:hover{
-    border: var(--color2) 1px solid;
+    border: var(--grey2) 1px solid;
     cursor: pointer;
 }
 #loadAutoGenerate textarea{
@@ -274,10 +274,10 @@ nav a div:hover i , nav a div:hover h3{
     padding: 1vh 1vw 1vh 1vw;
     margin-bottom: 2vh;
     border-radius: 0.5rem;
-    background: linear-gradient(145deg, var(--darkBox1), var(--darkBox2));
-    color: var(--color2);
+    background: linear-gradient(145deg, var(--grey2), var(--grey2));
+    color: var(--grey1);
     box-shadow: var(--darkShadow);
-    border-color: var(--color2);
+    border-color: var(--grey1);
 }
 
 #tableLektion{
@@ -285,7 +285,7 @@ nav a div:hover i , nav a div:hover h3{
 }
 #tableLektion th{
     padding: 0.5rem;
-    border-bottom: var(--color2) solid 1px;
+    border-bottom: var(--grey5) solid 1px;
 }
 #tableLektion td{
     text-align: center;
@@ -293,7 +293,7 @@ nav a div:hover i , nav a div:hover h3{
     padding: 0.5rem;
 }
 #tableLektion .begriff{
-    border-right: var(--color2) solid 1px;
+    border-right: var(--grey5) solid 1px;
 }
 
 /*********Lektion Overview*********/
@@ -303,6 +303,9 @@ nav a div:hover i , nav a div:hover h3{
 }
 #lektionOverview h2{
     font-size: 3rem;
+    border-bottom: var(--color) 1px solid;
+    margin-left: 20vw;
+    margin-right: 20vw;
 }
 #lektionOverview div{
     display: flex;
@@ -316,14 +319,14 @@ nav a div:hover i , nav a div:hover h3{
     font-size: 1.2rem;
     user-select: none;
     border-radius: 0.5rem;
-    background: linear-gradient(145deg, var(--darkBox1), var(--darkBox2));
-    color: var(--color2);
-    border: var(--color1) 1px solid;
+    color: var(--grey5);
+    background-color: var(--color);
+    border: var(--grey4) 1px solid;
     box-shadow: var(--darkShadow);
     transition: all 0.2s ease;
 }
 #lektionOverview div p:hover{
-    border: var(--color2) 1px solid;
+    border: var(--grey5) 1px solid;
     cursor: pointer;
 }
 #lektionOverview table{
@@ -353,9 +356,9 @@ nav a div:hover i , nav a div:hover h3{
     padding: 1vh 1vw 1vh 1vw;
     user-select: none;
     border-radius: 0.5rem;
-    background: linear-gradient(145deg, var(--darkBox1), var(--darkBox2));
-    color: var(--color2);
-    border: var(--color1) 1px solid;
+    background: linear-gradient(145deg, var(--grey3), var(--grey4));
+    color: var(--grey2);
+    border: var(--grey5) 1px solid;
     box-shadow: var(--darkShadow);
     transition: all 0.2s ease;
     font-size: 5rem;
@@ -377,25 +380,25 @@ nav a div:hover i , nav a div:hover h3{
     padding: 1vh 1vw 1vh 1vw;
     user-select: none;
     border-radius: 0.5rem;
-    background: linear-gradient(145deg, var(--darkBox1), var(--darkBox2));
-    color: var(--color2);
-    border: var(--color1) 1px solid;
+    background: linear-gradient(145deg, var(--grey3), var(--grey3));
+    color: var(--grey2);
+    border: var(--grey5) 1px solid;
     box-shadow: var(--darkShadow);
     transition: all 0.2s ease;
     font-size: 2rem;
 }
 #answer a{
     padding: 1vw;
-    border-bottom: 1px solid var(--color2);
+    border-bottom: 1px solid var(--grey3);
     margin-bottom: 5vh;
 }
 #answer input{
     padding: 1vh 1vw 1vh 1vw;
     user-select: none;
     border-radius: 0.5rem;
-    background: linear-gradient(145deg, var(--darkBox1), var(--darkBox2));
-    color: var(--color2);
-    border: var(--color1) 1px solid;
+    background: linear-gradient(145deg, var(--grey3), var(--grey3));
+    color: var(--grey2);
+    border: var(--grey5) 1px solid;
     box-shadow: var(--darkShadow);
     transition: all 0.2s ease;
     font-size: 3rem;
