--- a/style.css
+++ b/style.css
@@ -20,10 +20,10 @@
 
 /************* MAIN *************/
 :root {
-    --lightShadow: 5px 5px 16px #9da0a6,
-    -5px -5px 16px #ffffff;
-    --darkShadow: 5px 5px 16px #262a31,
-    -5px -5px 16px #3e4451;
+    --lightShadow: 3px 3px 10px #9da0a6,
+    -3px -3px 10px #ffffff;
+    --darkShadow: 3px 3px 10px #21252c,
+    -3px -3px 10px #1e2127;
 
     --color: tomato;
     --grey1: #1d2533;
@@ -78,10 +78,10 @@ nav a{
     user-select: none;
 }
 nav a:nth-child(4){
-    margin-right: 35vw; 
+    margin-right: 40vw; 
 }
 nav a:nth-child(2){
-    margin-left: 35vw;
+    margin-left: 32vw;
 }
 nav a:last-of-type{
     width: 5vw;
@@ -151,14 +151,17 @@ nav a div:hover i , nav a div:hover h3{
     margin: 1vh 15vw 1vh 15vw;
 }
 #addLektion h1{
-    text-align: left;
+    padding: 1vw;
+    text-align: center;
 }
 #addLektion .input{
-    width: 70vw;
+    width: 65vw;
     height: 5vh;
     padding: 0 1vw 0 1vw;
+    margin: 1vh 2.5vw 1vh 2.5vw;
     margin-bottom: 2vh;
     border-radius: 0.5rem;
+    border: none;
     background: linear-gradient(145deg, var(--grey2), var(--grey2));
     color: var(--grey5);
     box-shadow: var(--darkShadow);
@@ -191,7 +194,8 @@ nav a div:hover i , nav a div:hover h3{
     height: 100%;
     padding: 1vw 2vw 1vw 2vw;
     background: var(--darkShadow);
-    color: var(--grey2);
+    color: var(--grey5);
+    font-weight: bold;
     border: none;
     font-size: 1rem;
 }
@@ -231,8 +235,9 @@ nav a div:hover i , nav a div:hover h3{
 }
 #addLektion #autoGenerate{
     user-select: none;
-    width: 70vw;
+    width: 65vw;
     height: 5vh;
+    margin: 1vh 2.5vw 1vh 2.5vw;
     border-radius: 0.5rem;
     background: linear-gradient(145deg, var(--grey2), var(--grey2));
     color: var(--grey4);
@@ -355,11 +360,12 @@ nav a div:hover i , nav a div:hover h3{
     width: 50vw;
     height: 50vh;
     padding: 1vh 1vw 1vh 1vw;
+    margin: 1vh 0 1vh 0;
     user-select: none;
     border-radius: 0.5rem;
-    background: linear-gradient(145deg, var(--grey3), var(--grey4));
-    color: var(--grey2);
-    border: var(--grey5) 1px solid;
+    background: linear-gradient(145deg, var(--grey2), var(--grey2));
+    color: var(--grey5);
+    border: var(--grey2) 1px solid;
     box-shadow: var(--darkShadow);
     transition: all 0.2s ease;
     font-size: 5rem;
@@ -379,28 +385,50 @@ nav a div:hover i , nav a div:hover h3{
     width: 50vw;
     height: 50vh;
     padding: 1vh 1vw 1vh 1vw;
+    margin: 1vh 0 1vh 0;
+    margin-left: 5vw;
     user-select: none;
     border-radius: 0.5rem;
-    background: linear-gradient(145deg, var(--grey3), var(--grey3));
-    color: var(--grey2);
-    border: var(--grey5) 1px solid;
+    background: linear-gradient(145deg, var(--grey2), var(--grey2));
+    color: var(--grey5);
+    border: var(--grey2) 1px solid;
     box-shadow: var(--darkShadow);
     transition: all 0.2s ease;
     font-size: 2rem;
 }
 #answer a{
     padding: 1vw;
-    border-bottom: 1px solid var(--grey3);
+    border-bottom: 1px solid var(--grey5);
     margin-bottom: 5vh;
 }
 #answer input{
     padding: 1vh 1vw 1vh 1vw;
     user-select: none;
     border-radius: 0.5rem;
-    background: linear-gradient(145deg, var(--grey3), var(--grey3));
-    color: var(--grey2);
+    background: linear-gradient(145deg, var(--grey2), var(--grey2));
+    color: var(--grey5);
     border: var(--grey5) 1px solid;
     box-shadow: var(--darkShadow);
     transition: all 0.2s ease;
     font-size: 3rem;
+}
+#backToMenu{
+    position: absolute;
+    top: 75vh;
+    left: 42.5vw;
+    width: 15vw;
+    text-align: center;
+    padding: 1vh 1vw 1vh 1vw;
+    user-select: none;
+    border-radius: 0.5rem;
+    background: linear-gradient(145deg, var(--grey2), var(--grey2));
+    color: var(--grey5);
+    border: var(--grey5) 1px solid;
+    box-shadow: var(--darkShadow);
+    transition: all 0.2s ease;
+    font-size: 2rem;
+}
+#backToMenu:hover{
+    border: var(--grey3) 1px solid;
+    cursor: pointer;
 }
