--- a/style.css
+++ b/style.css
@@ -98,7 +98,8 @@ nav a div:hover i , nav a div:hover h3{
     cursor: pointer;
 }
 #active {
-    border-bottom: 2px solid var(--grey4);
+    color: var(--color);
+    border-bottom: 2px solid var(--color);
 }
 #header img{
     overflow-y: hidden;
@@ -309,9 +310,8 @@ nav a div:hover i , nav a div:hover h3{
 }
 #lektionOverview h2{
     font-size: 3rem;
-    border-bottom: var(--color) 1px solid;
-    margin-left: 20vw;
-    margin-right: 20vw;
+    border-bottom: var(--grey4) 1px solid;
+    margin: 0 10vw 3vh 10vw;
 }
 #lektionOverview div{
     display: flex;
@@ -327,12 +327,14 @@ nav a div:hover i , nav a div:hover h3{
     border-radius: 0.5rem;
     color: var(--grey5);
     background-color: var(--color);
-    border: var(--grey4) 1px solid;
+    border: var(--grey4) 1.5px solid;
     box-shadow: var(--darkShadow);
     transition: all 0.2s ease;
 }
 #lektionOverview div p:hover{
-    border: var(--grey5) 1px solid;
+    background-color: var(--grey2);
+    color: var(--color);
+    border: var(--color) 1.5px solid;
     cursor: pointer;
 }
 #lektionOverview table{
@@ -431,4 +433,8 @@ nav a div:hover i , nav a div:hover h3{
 #backToMenu:hover{
     border: var(--grey3) 1px solid;
     cursor: pointer;
+}
+
+.fa-solid{
+    user-select: none;
 }
