--- a/style.css
+++ b/style.css
@@ -100,6 +100,10 @@ nav a div:hover i , nav a div:hover h3{
 #active {
     color: var(--color);
     border-bottom: 2px solid var(--color);
+    animation-name: idel;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 #header img{
     overflow-y: hidden;
@@ -107,6 +111,15 @@ nav a div:hover i , nav a div:hover h3{
 }
 #header img:hover{
     cursor: pointer;
+}
+
+@keyframes idel {
+    from{
+        transform: translateY(.2rem);
+    }
+    to{
+        transform: translateY(-.2rem);
+    }
 }
 
 /************* CONTENT *************/
@@ -337,6 +350,30 @@ nav a div:hover i , nav a div:hover h3{
     border: var(--color) 1.5px solid;
     cursor: pointer;
 }
+#lektionOverview section{
+    display: flex;
+    justify-content: center;
+    margin: 2vh 0 10vh 0;
+}
+#lektionOverview section p{
+    margin: 1vw;
+    width: 20vw;
+    padding: 1vh 1vw 1vh 1vw;
+    font-size: 1.2rem;
+    user-select: none;
+    border-radius: 0.5rem;
+    color: var(--color);
+    background-color: var(--grey2);
+    border: var(--color) 1.5px solid;
+    box-shadow: var(--darkShadow);
+    transition: all 0.2s ease;
+}
+#lektionOverview section p:hover{
+    background-color: var(--color);
+    color: var(--grey2);
+    border: var(--grey2) 1.5px solid;
+    cursor: pointer;
+}
 #lektionOverview table{
     width: 40vw;
     margin: 0 10vw 0 10vw;
@@ -380,6 +417,15 @@ nav a div:hover i , nav a div:hover h3{
     cursor: pointer;
 }
 
+#achievment{
+    position: absolute;
+    top: 73.5vh;
+    left: 46vw;
+}
+#achievment a{
+    font-size: 1.3rem;
+}
+
 #answer{
     display: flex;
     flex-direction: column;
@@ -416,7 +462,7 @@ nav a div:hover i , nav a div:hover h3{
 }
 #backToMenu{
     position: absolute;
-    top: 75vh;
+    top: 80vh;
     left: 42.5vw;
     width: 15vw;
     text-align: center;
@@ -425,13 +471,12 @@ nav a div:hover i , nav a div:hover h3{
     border-radius: 0.5rem;
     background: linear-gradient(145deg, var(--grey2), var(--grey2));
     color: var(--grey5);
-    border: var(--grey5) 1px solid;
     box-shadow: var(--darkShadow);
     transition: all 0.2s ease;
     font-size: 2rem;
 }
 #backToMenu:hover{
-    border: var(--grey3) 1px solid;
+    border: var(--grey4) 1px solid;
     cursor: pointer;
 }
 
