--- a/style.css
+++ b/style.css
@@ -338,9 +338,9 @@ nav a div:hover i , nav a div:hover h3{
     font-size: 1.2rem;
     user-select: none;
     border-radius: 0.5rem;
-    color: var(--grey5);
+    color: var(--grey2);
     background-color: var(--color);
-    border: var(--grey4) 1.5px solid;
+    border: var(--grey2) 1.5px solid;
     box-shadow: var(--darkShadow);
     transition: all 0.2s ease;
 }
@@ -417,13 +417,20 @@ nav a div:hover i , nav a div:hover h3{
     cursor: pointer;
 }
 
+#achievmentA{
+    position: absolute;
+    top: 70vh;
+    left: 45vw;
+}
 #achievment{
     position: absolute;
-    top: 73.5vh;
-    left: 46vw;
+    display: flex;
+    top: 70vh;
+    left: 35vw;
 }
-#achievment a{
+#achievment a, #achievmentA a{
     font-size: 1.3rem;
+    padding: 2vw;
 }
 
 #answer{
@@ -472,10 +479,31 @@ nav a div:hover i , nav a div:hover h3{
     background: linear-gradient(145deg, var(--grey2), var(--grey2));
     color: var(--grey5);
     box-shadow: var(--darkShadow);
+    border: var(--grey2) 1px solid;
     transition: all 0.2s ease;
     font-size: 2rem;
 }
 #backToMenu:hover{
+    border: var(--grey4) 1px solid;
+    cursor: pointer;
+}
+#replay{
+    position: absolute;
+    top: 50vh;
+    left: 42.5vw;
+    width: 15vw;
+    text-align: center;
+    padding: 1vh 1vw 1vh 1vw;
+    user-select: none;
+    border-radius: 0.5rem;
+    background: linear-gradient(145deg, var(--grey2), var(--grey2));
+    color: var(--grey5);
+    border: var(--grey2) 1px solid;
+    box-shadow: var(--darkShadow);
+    transition: all 0.2s ease;
+    font-size: 2rem;
+}
+#replay:hover{
     border: var(--grey4) 1px solid;
     cursor: pointer;
 }
