--- a/style.css
+++ b/style.css
@@ -170,7 +170,8 @@ nav a div:hover i , nav a div:hover h3{
 }
 .preview:hover{
     cursor: pointer;
-    border: var(--grey3) 1px solid;
+    border: var(--color) 1px solid;
+    color: var(--color)
 }
 
 
@@ -198,7 +199,8 @@ nav a div:hover i , nav a div:hover h3{
 }
 #addLektion table{
     width: 60vw;
-    margin: 10vh 5vw 10vh 5vw;
+    margin: 10vh 0 10vh 0;
+    margin-inline: auto;
     padding: 1vw;
     text-align: center;
     border-collapse: collapse;
@@ -245,21 +247,23 @@ nav a div:hover i , nav a div:hover h3{
     cursor: pointer;
 }   
 #addLektion #confirm{
-    user-select: none;
-    background: linear-gradient(145deg, var(--grey2), var(--grey2));
-    color: var(--grey5);
-    box-shadow: var(--darkShadow);
-    border: var(--grey5) 1px solid;
+    margin-inline: auto;
     width: 20vw;
-    height: 5vh;
+    padding: 1vh 1vw 1vh 1vw;
+    font-size: 1.2rem;
+    user-select: none;
+    border-radius: 0.5rem;
+    color: var(--grey2);
+    background-color: var(--color);
+    border: var(--grey2) 1.5px solid;
+    box-shadow: var(--darkShadow);
     text-align: center;
-    padding-top: 1vh;
-    border-radius: 1rem;
-    margin: 0 25vw 0 25vw;
-    transition: all 0.2s ease;
+    transition: all 0.2s ease; 
 }
 #addLektion #confirm:hover{
-    border: var(--grey1) 1px solid;
+    color: var(--color);
+    background-color: var(--grey2);
+    border: var(--color) 1.5px solid;
     cursor: pointer;
 }
 #addLektion #autoGenerate{
@@ -545,4 +549,34 @@ nav a div:hover i , nav a div:hover h3{
 
 .fa-solid{
     user-select: none;
+}
+
+#playbutton-parent{
+    aspect-ratio: 1 / 1;
+    background-color: #515864;
+    border-radius: 50%;
+    height: 5rem;
+    box-sizing: border-box;
+    display: grid;
+    place-items: center;
+    box-shadow: 0 0 .2rem .2rem var(--grey1);
+}
+
+#playbutton-child{
+    aspect-ratio: 1 / 1;
+    background-color: var(--grey3);
+    border-radius: 50%;
+    height: 80%;
+    box-sizing: border-box;
+    display: grid;
+    place-items: center;
+    box-shadow: inset .2rem .25rem .2rem var(--grey2),
+    inset 0rem 0rem .2rem .1rem var(--grey2);
+    user-select: none;
+}
+#playbutton-child:hover{
+    cursor: pointer;
+}
+#playbutton-child:active{
+    height: 90%;
 }
