--- a/style.css
+++ b/style.css
@@ -302,6 +302,12 @@ nav a div:hover i , nav a div:hover h3{
     cursor: pointer;
     opacity: 1;
 }
+#addMenu{
+    display: flex;
+}
+summary:hover{
+    cursor: pointer;
+}
 
 /*********Auto Generate Table *********/
 #loadAutoGenerate{
@@ -580,16 +586,24 @@ nav a div:hover i , nav a div:hover h3{
     inset 0rem 0rem .2rem .1rem var(--grey2);
     user-select: none;
     overflow-y: hidden;
+    position: relative;
 }
 #playbutton-child i{
-    font-size: 1.5rem;
-    color: var(--grey4)
+    font-size: 2rem;
+    color: var(--grey5);
+    margin: 0;
+    padding: 0;
 }
 #playbutton-child:hover{
     cursor: pointer;
 }
 #playbutton-child:active{
     height: 90%;
+    width: 90%;
+}
+#playbutton-child:active i{
+    font-size: 2.2rem;
+
 }
 #sound{
     display: none;
